--- a/Dhruv Portfolio.html
+++ b/Dhruv Portfolio.html
@@ -7,7 +7,7 @@
 	<title>Dhruv Modi| Web Developer</title>
 	<link rel="icon" type="image/png" href="images/male-technologist.png" hreflang="en-us">
 	<link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
-	<link rel="stylesheet" type="text/css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	
 </head>
 <body>
