--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<span>Get in touch</span>
 			<span class="emoji pointer"></span>
 			<span id="emailme">
-				<a href="mailto:Dhruvmodi2019.com" target="_blank" class="highlight-link">Dhruvmodi2019@gmail.com</a>
+				<a href="mailto:someone@example.com?subject=Hello&body=I%20want%20to%20get%20in%20touch!">Dhruvmodi2019@gmail.com</a>
 			</span>
 		</h3>
 	</header>
