--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<span>Get in touch</span>
 			<span class="emoji pointer"></span>
 			<span id="emailme">
-				<a href="mailto:Dhruvmodi2019@gmail.com?subject=Interested%20in%20Working%20Together&body=Hello,%0D%0A%0D%0AI%20came%20across%20your%20portfolio%20and%20was%20really%20impressed%20by%20your%20work.%20I’d%20love%20to%20discuss%20a%20potential%20project%20with%20you.%0D%0A%0D%0ALooking%20forward%20to%20your%20response!%0D%0A%0D%0ABest,%0D%0A[Your Name]">Get in Touch </a>
+				<a href="mailto:Dhruvmodi2019@gmail.com?subject=Interested%20in%20Working%20Together&body=Hello,%0D%0A%0D%0AI%20came%20across%20your%20portfolio%20and%20was%20really%20impressed%20by%20your%20work.%20I’d%20love%20to%20discuss%20a%20potential%20project%20with%20you.%0D%0A%0D%0ALooking%20forward%20to%20your%20response!%0D%0A%0D%0ABest,%0D%0A[Your Name]">Dhruvmodi2019@gmail.com </a>
 				  
 			</span>
 		</h3>
