--- a/index.html
+++ b/index.html
@@ -268,21 +268,12 @@
 				</span> 
 				<img src="images/email.svg" alt="email">
 			</a>
-			<a href="https:#" target="_blank" title="linkedin"> 
+			<a href="https://www.linkedin.com/in/dhruv-modi-269968203/" target="_blank" title="LinkedIn"> 
 				<span class="text">
-					linkedin
+					LinkedIn
 				</span>
-				<img src="images/linkedin.svg" alt="https://www.linkedin.com/in/dhruv-modi-269968203/">
+				<img src="images/linkedin.svg" alt="LinkedIn Profile">
 			</a>
-			
-			<a href="#" target="_blank" title="twitter"> 
-				<span class="text">
-					twitter
-				</span>
-				<img src="images/twitter.svg" alt="twitter">
-			</a> 
-			
-
 		</div>
  	</footer>
 	<button id="top-button" style="display: inline-block;"> 
