--- a/index.html
+++ b/index.html
@@ -244,6 +244,27 @@
 		</div>
 	</section>
 
+	<section>
+		<div id="resume" style="text-align: center; padding: 20px;">
+			<h2>My Resume</h2>
+		
+			<!-- Responsive Resume Viewer -->
+			<iframe src="documents/resume.pdf" 
+					style="border: none; width: 90%; max-width: 800px; height: 500px;">
+			</iframe>
+		
+			<!-- Download Button -->
+			<br>
+			<a href="documents/resume.pdf" download 
+			   style="display: inline-block; margin-top: 15px; padding: 10px 20px; 
+					  background: #0073b1; color: white; text-decoration: none; 
+					  border-radius: 5px; font-weight: bold;">
+				Download Resume (PDF)
+			</a>
+		</div>
+		
+	</section>
+
 	<footer class="footer">
 	 	<div class="footer_copyright"> 
 	 		<div class="top"> 
