--- a/index.html
+++ b/index.html
@@ -249,13 +249,13 @@
 			<h2>My Resume</h2>
 		
 			<!-- Responsive Resume Viewer -->
-			<iframe src="resume.pdf" 
+			<iframe src="/Resume.pdf" 
 					style="border: none; width: 90%; max-width: 800px; height: 500px;">
 			</iframe>
 		
 			<!-- Download Button -->
 			<br>
-			<a href="resume.pdf" download 
+			<a href="/Resume.pdf" download 
 			   style="display: inline-block; margin-top: 15px; padding: 10px 20px; 
 					  background: #0073b1; color: white; text-decoration: none; 
 					  border-radius: 5px; font-weight: bold;">
