--- a/index.html
+++ b/index.html
@@ -245,8 +245,9 @@
 	</section>
 
 	<section>
-		<div id="resume" style="text-align: center; padding: 20px;">
-			<h2>My Resume</h2>
+		<div class="section_title">
+			Experience
+		</div>
 		
 			<!-- Responsive Resume Viewer -->
 			<iframe src="/Resume.pdf" 
