--- a/index.html
+++ b/index.html
@@ -245,9 +245,8 @@
 	</section>
 
 	<section>
-		<div class="section_title">
-			Resume
-		</div>
+		<div id="resume" style="text-align: center; padding: 20px;">
+			<h2>My Resume</h2>
 		
 			<!-- Responsive Resume Viewer -->
 			<iframe src="/Resume.pdf" 
