--- a/index.html
+++ b/index.html
@@ -233,11 +233,11 @@
 							<a href="http#" target="_blank">Diya Infotech</a>
 						</div>
 						<div class="job_time">       
-							Jun 2021 - Jan 2022
+							Oct 2021 - Jan 2022
 						</div>
 					</div>
 					<div class="job_position">
-						Full Time Assitant Software Developer
+					 Software Developer Intern
 					</div>
 				</div>
 			</div>
