--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
 	<section>
 		<div id="resume" style="text-align: center; padding: 20px;">
-			<h2>My Resume</h2>
+			<h2>Resume</h2>
 		
 			<!-- Responsive Resume Viewer -->
 			<iframe src="/Resume.pdf" 
